# openai-mock

./: CONTRIBUTING.md  Cargo.toml
src/: lib.rs  tests.rs
src/handlers/: completion_handler.rs  mod.rs
src/models/: completion.rs  mod.rs
src/routes/: completion_routes.rs  mod.rs
src/utils/: choices.rs  mod.rs  token_counting.rs  utils.rs
src/validators/: mod.rs  optional_fields.rs  req_required_fields.rs  validation_error.rs
