[package]
name = "openai-mock"
version = "0.1.0"
authors = ["Your Name <raymac@ievolution.com>"]
edition = "2021"
description = "A Rust library to mock OpenAI's API for testing purposes."
license = "MIT"
repository = "https://github.com/socrates8300/openai-mock"

[dependencies]
actix-web = { version = "4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
uuid = { version = "1.1", features = ["v4"] }
chrono = "0.4.38"
tiktoken-rs = { version = "0.6.0", features = ["async-openai", "dhat-heap"], optional = true }

[features]
default = ["actix-web"]
